--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,18 @@
 }
 
 /* Ajustes generales para el HTML */
-html{
+html {
     font-size: 60%;
     overflow-x: hidden;
 }
-body{
+
+body {
     background: var(--bg-color);
     color: var(--text-color);
 }
 
 /* Estilos para el encabezado fijo */
-.header{
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -44,23 +45,25 @@ body{
 }
 
 /* Estilos para el logo */
-.logo{
+.logo {
     font-size: 3rem;
     color: var(--text-color);
     font-weight: 800;
     cursor: pointer;
     transition: 0.3s ease;
 }
-.logo:hover{
+
+.logo:hover {
     transform: scale(1.1);
 
 }
-.logo span{
+
+.logo span {
     text-shadow: 0 0 25px var(--main-color);
 }
 
 /* Estilos para los enlaces de la barra de navegación */
-.navbar a{
+.navbar a {
     font-size: 1.8rem;
     color: var(--text-color);
     margin-left: 4rem;
@@ -68,33 +71,35 @@ body{
     transition: 0.3s ease;
     border-bottom: 3px solid transparent;
 }
+
 .navbar a:hover,
-.navbar a:active{
+.navbar a:active {
     color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
 
 /* Icono del menú para pantallas pequeñas */
-#menu-icon{
+#menu-icon {
     font-size: 3.6rem;
     color: var(--main-color);
     display: none;
 }
 
 /* Estilos generales para las secciones */
-section{
+section {
     min-height: 100vh;
     padding: 10rem 12% 10rem;
 }
 
 /* Sección de inicio */
-.home{
+.home {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15rem;
 }
-.home-content{
+
+.home-content {
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -102,18 +107,22 @@ section{
     justify-content: center;
     margin-top: 3rem;
 }
-span{
+
+span {
     color: var(--main-color);
 }
-.logo span{
+
+.logo span {
     color: var(--main-color);
 }
-.home-content h3{
+
+.home-content h3 {
     margin-bottom: 2rem;
     margin-top: 1rem;
     font-size: 3.5rem;
 }
-.home-content h1{
+
+.home-content h1 {
     font-size: 7rem;
     font-weight: 700;
     margin-top: 1.5rem;
@@ -121,10 +130,11 @@ span{
 }
 
 /* Imagen de perfil */
-.home-img{
+.home-img {
     border-radius: 50%;
 }
-.home-img img{
+
+.home-img img {
     position: relative;
     top: 3rem;
     width: 32vw;
@@ -135,7 +145,7 @@ span{
 }
 
 /* Párrafo de inicio */
-.home-content p{
+.home-content p {
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.8;
@@ -143,28 +153,30 @@ span{
 }
 
 /* Iconos */
-.social-icons a{
-     display: inline-flex;
-     justify-content: center;
-     align-items: center;
-     width: 4.5rem;
-     height: 4.5rem;
-     background: transparent;
-     border: 2px solid var(--main-color);
-     font-size: 2.5rem;
-     border-radius: 50%;
-     color: var(--main-color);
-     margin: 3rem 1.5rem 3rem 0;
-     transition: 0.3s ease-in-out;
+.social-icons a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.5rem;
+    height: 4.5rem;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    font-size: 2.5rem;
+    border-radius: 50%;
+    color: var(--main-color);
+    margin: 3rem 1.5rem 3rem 0;
+    transition: 0.3s ease-in-out;
 }
-.social-icons a:hover{
+
+.social-icons a:hover {
     color: var(--text-color);
     transform: scale(1.3)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
 }
+
 /* ToolTip */
-.tooltip-text{
+.tooltip-text {
     font-size: 15px;
     visibility: hidden;
     width: 120px;
@@ -181,7 +193,8 @@ span{
     opacity: 0;
     transition: opacity 0.3s;
 }
-.tooltip-text::after{
+
+.tooltip-text::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -191,8 +204,9 @@ span{
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.3);
 }
+
 /* Botones */
-.btn{
+.btn {
     display: inline-block;
     padding: 1rem 2.8rem;
     background: var(--main-color);
@@ -206,41 +220,49 @@ span{
     transition: 0.3s ease-in-out;
     cursor: pointer;
 }
-.btn:hover{
+
+.btn:hover {
     transform: scale(1.05);
     box-shadow: 0 0 50px var(--main-color);
 }
-.btn-group{
+
+.btn-group {
     display: flex;
     align-items: center;
     gap: 1.5rem;
 }
-.btn-group a:nth-of-type(2){
+
+.btn-group a:nth-of-type(2) {
     background-color: black;
     color: var(--main-color);
     border: 2px solid var(--main-color);
     box-shadow: 0 0 25px transparent;
 }
-.btn-group a:nth-of-type(2):hover{
+
+.btn-group a:nth-of-type(2):hover {
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
     color: black;
 }
+
 /* Animación de texto de inicio*/
-.text-animation{
+.text-animation {
     font-size: 34px;
     font-weight: 600;
     min-width: 280px;
 }
-.text-animation span{
+
+.text-animation span {
     position: relative;
 }
-.text-animation span::before{
+
+.text-animation span::before {
     content: "Game Developer";
     color: var(--main-color);
     animation: words 20s infinite;
 }
-.text-animation span::after{
+
+.text-animation span::after {
     content: "";
     background-color: var(--bg-color);
     position: absolute;
@@ -249,29 +271,44 @@ span{
     border-left: 3px solid var(--bg-color);
     right: -8px;
     animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
-}@keyframes cursor{
-    to{
+}
+
+@keyframes cursor {
+    to {
         border-left: 2px solid var(--main-color);
     }
 }
+
 @keyframes words {
-    0%, 20% {
+
+    0%,
+    20% {
         content: "Software Engineer";
     }
-    21%, 40% {
-        content: "Game Designer";
+
+    21%,
+    40% {
+        content: "Project Manager";
     }
-    41%, 60% {
+
+    41%,
+    60% {
         content: "Software Tester";
     }
-    61%, 80% {
+
+    61%,
+    80% {
         content: "Game Developer";
     }
-    81%, 100% {
+
+    81%,
+    100% {
         content: "Sound Designer";
     }
 }
+
 @keyframes typing {
+
     10%,
     15%,
     30%,
@@ -284,6 +321,7 @@ span{
     95% {
         width: 0;
     }
+
     5%,
     20%,
     25%,
@@ -298,28 +336,31 @@ span{
 }
 
 /* Títulos */
-.heading{
+.heading {
     font-size: 8rem;
     text-align: center;
     margin: 5rem 0;
 }
 
 /* Linea de Tiempo */
-.aboutme{
+.aboutme {
     padding: 100px 15px;
     background: var(--second-bg-color);
 }
-.aboutme h2{
+
+.aboutme h2 {
     margin-bottom: 5rem;
 }
-.timeline-items{
+
+.timeline-items {
     max-width: 1200px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     position: relative;
 }
-.timeline-items::before{
+
+.timeline-items::before {
     content: "";
     position: absolute;
     width: 5px;
@@ -327,39 +368,46 @@ span{
     background-color: var(--main-color);
     left: calc(50% - 1px);
 }
-.timeline-item{
+
+.timeline-item {
     margin-bottom: 40px;
     width: 100%;
     position: relative;
 }
-.timeline-item:last-child{
+
+.timeline-item:last-child {
     margin-bottom: 0;
 }
-.timeline-item:nth-child(odd){
+
+.timeline-item:nth-child(odd) {
     padding-right: calc(50% + 30px);
     text-align: right;
 }
-.timeline-item:nth-child(even){
+
+.timeline-item:nth-child(even) {
     padding-left: calc(50% + 30px);
 }
-.timeline-dot{
+
+.timeline-dot {
     height: 21px;
     width: 21px;
     background-color: var(--main-color);
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color);
+        0 0 50px var(--main-color);
     position: absolute;
     left: calc(50% - 8px);
     border-radius: 50%;
     top: 10px;
 }
-.timeline-date{
+
+.timeline-date {
     font-size: 20px;
     font-weight: 800;
     color: white;
     margin: 6px 0 15px;
 }
-.timeline-content{
+
+.timeline-content {
     background-color: var(--bg-color);
     border: 3px solid var(--main-color);
     padding: 30px 50px;
@@ -368,17 +416,20 @@ span{
     cursor: pointer;
     transition: 0.3s ease-in-out;
 }
-.timeline-content:hover{
+
+.timeline-content:hover {
     transform: scale(1.05);
     box-shadow: 0 0 25px var(--main-color);
 }
-.timeline-content h3{
+
+.timeline-content h3 {
     font-size: 20px;
     color: white;
     margin: 0 0 10px;
     font-weight: 500;
 }
-.timeline-content p{
+
+.timeline-content p {
     color: white;
     font-size: 16px;
     font-weight: 300;
@@ -386,13 +437,15 @@ span{
 }
 
 /*Barra lateral*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 15px;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background-color: var(--bg-color);
     width: 50px;
 }
@@ -402,9 +455,11 @@ span{
     background-color: var(--bg-color);
     padding: 100px 15px;
 }
-.projects h2{
+
+.projects h2 {
     margin-bottom: 5rem;
 }
+
 .wrapper {
     width: 100%;
     height: auto;
@@ -412,11 +467,13 @@ span{
     align-items: center;
     justify-content: center;
 }
+
 .container {
     display: flex;
     flex-wrap: nowrap;
     justify-content: start;
 }
+
 .card-container {
     display: flex;
     flex-direction: column;
@@ -438,17 +495,20 @@ span{
     transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
     box-shadow: 0 0 10px var(--main-color);
 }
+
 .card:hover {
     transform: scale(1.03);
     box-shadow: 0 0 20px var(--main-color);
 }
+
 .card .row {
     color: var(--main-color);
     display: flex;
     flex-wrap: nowrap;
     padding-bottom: 5px;
 }
-.card .row h4{
+
+.card .row h4 {
     padding-left: 10px;
     text-transform: uppercase;
     font-size: 10px;
@@ -456,6 +516,7 @@ span{
     color: var(--main-color);
     display: inline-block;
 }
+
 /* Descripciones fuera de las cartas */
 .description {
     background: var(--second-bg-color);
@@ -473,6 +534,7 @@ span{
     transform: translateY(30px);
     transition: opacity 0.1s ease, width 0.5s cubic-bezier(0.28, -0.03, 0, 0.99);
 }
+
 .description h4 {
     padding: 5px;
     font-size: 20px;
@@ -482,6 +544,7 @@ span{
     transition: 0.3s ease-in-out;
     display: inline-block;
 }
+
 .description h4:hover {
     color: var(--text-color);
     transform: scale(1.05) translateY(-1px);
@@ -489,11 +552,13 @@ span{
     background-color: rgba(82, 255, 255, 0.696);
     border-radius: 5px;
 }
+
 .description p {
     font-size: 18px;
     color: var(--text-color);
     padding: 10px;
 }
+
 .description h3 {
     font-size: 20px;
     color: var(--text-color);
@@ -518,20 +583,24 @@ span{
     color: var(--text-color);
     font-weight: bold;
 }
+
 .description ul ul {
     font-size: 16px;
     color: var(--text-color);
     margin-top: 8px;
     margin-left: 20px;
 }
+
 /* Ocultar los inputs de radio */
 .projects input {
     display: none;
 }
+
 /* Ampliar la carta seleccionada */
 input:checked+label {
     width: 600px;
 }
+
 /* Mostrar la descripción correspondiente a la carta seleccionada */
 input:checked+label+.description {
     opacity: 1 !important;
@@ -539,28 +608,34 @@ input:checked+label+.description {
     height: auto;
     width: 600px;
 }
+
 .card[for="c1"] {
     background-image: url('./images/img1.jpg');
 }
+
 .card[for="c2"] {
     background-image: url('./images/img2.jpg');
 }
+
 .card[for="c3"] {
     background-image: url('./images/img3.jpg');
 }
+
 .card[for="c4"] {
     background-image: url('./images/img4.jpg');
 }
 
 /* Formulario de contacto */
-.contact{
+.contact {
     background-color: var(--second-bg-color);
 }
-.contact h2{
+
+.contact h2 {
     margin-bottom: 3rem;
     color: white;
 }
-.contact form{
+
+.contact form {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -568,13 +643,15 @@ input:checked+label+.description {
     margin: 5rem auto;
     text-align: center;
 }
-.contact form .input-box{
+
+.contact form .input-box {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .contact form .input-box input,
-.contact form textarea{
+.contact form textarea {
     width: 100%;
     padding: 2.5rem;
     font-size: 1.8rem;
@@ -585,24 +662,27 @@ input:checked+label+.description {
     margin: 1.5rem 0;
     resize: none;
 }
-.contact form .btn{
+
+.contact form .btn {
     margin-top: 2rem;
 }
 
 /* Pie de página */
-.footer{
+.footer {
     position: relative;
     bottom: 0;
     width: 100%;
     padding: 40px 0;
     background-color: var(--bg-color);
 }
-.footer .social{
+
+.footer .social {
     text-align: center;
     padding-bottom: 25px;
     color: var(--main-color);
 }
-.footer .social a{
+
+.footer .social a {
     font-size: 25px;
     color: var(--main-color);
     border: 2px solid var(--main-color);
@@ -615,13 +695,15 @@ input:checked+label+.description {
     margin: 0 10px;
     transition: 0.3s ease-in-out;
 }
-.footer .social a:hover{
+
+.footer .social a:hover {
     transform: scale(1.2)translateY(-10px);
     background-color: var(--main-color);
     color: black;
     box-shadow: 0 0 25px var(--main-color);
 }
-.footer .tooltip-text-footer{
+
+.footer .tooltip-text-footer {
     font-size: 15px;
     visibility: hidden;
     width: 120px;
@@ -638,7 +720,8 @@ input:checked+label+.description {
     opacity: 0;
     transition: opacity 0.3s;
 }
-.footer .tooltip-text-footer::after{
+
+.footer .tooltip-text-footer::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -648,7 +731,8 @@ input:checked+label+.description {
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.3);
 }
-.footer ul{
+
+.footer ul {
     margin-top: 0;
     padding: 0;
     font-size: 18px;
@@ -656,19 +740,23 @@ input:checked+label+.description {
     margin-bottom: 0;
     text-align: center;
 }
-.footer ul li a{
+
+.footer ul li a {
     color: white;
     border-bottom: 3px solid transparent;
     transition: 0.3s ease-in-out;
 }
-.footer ul li a:hover{
+
+.footer ul li a:hover {
     border-bottom: 3px solid var(--main-color);
 }
-.footer ul li{
+
+.footer ul li {
     display: inline-block;
     padding: 0 15px;
 }
-.footer .copyright{
+
+.footer .copyright {
     margin-top: 50px;
     text-align: center;
     font-size: 16px;
@@ -676,46 +764,56 @@ input:checked+label+.description {
 }
 
 /* AJustes para móvil */
-@media(max-width:1285px){
-    html{
+@media(max-width:1285px) {
+    html {
         font-size: 55%;
     }
 }
+
 /* Linea de tiempo en móvil */
-@media(max-width:991px){
-    header{
+@media(max-width:991px) {
+    header {
         padding: 2rem 3%;
     }
-    section{
+
+    section {
         padding: 10rem 3% 2rem;
     }
-    .timeline-items::before{
+
+    .timeline-items::before {
         left: 7px;
     }
-    .timeline-item:nth-child(odd){
+
+    .timeline-item:nth-child(odd) {
         padding: 0;
         text-align: left;
     }
+
     .timeline-item:nth-child(odd),
-    .timeline-item:nth-child(even){
+    .timeline-item:nth-child(even) {
         padding-left: 37px;
     }
-    .timeline-dot{
+
+    .timeline-dot {
         left: 0;
     }
-    .contact form{
+
+    .contact form {
         flex-direction: column;
     }
-    .footer{
+
+    .footer {
         padding: 2rem 3%;
     }
 }
+
 /* Sección de incio en móvil*/
-@media(max-width:895px){
-    #menu-icon{
+@media(max-width:895px) {
+    #menu-icon {
         display: block;
     }
-    .navbar{
+
+    .navbar {
         position: absolute;
         top: 100%;
         right: 0;
@@ -728,70 +826,86 @@ input:checked+label+.description {
         border-bottom: 2px solid var(--main-color);
         display: none;
     }
-    .navbar.active{
+
+    .navbar.active {
         display: block;
     }
-    .navbar a{
+
+    .navbar a {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
         color: white;
     }
-    .home{
+
+    .home {
         flex-direction: column-reverse;
         margin: 5rem 4rem;
     }
-    .home-content h3{
+
+    .home-content h3 {
         font-size: 2.6rem;
     }
-    .home-content h1{
+
+    .home-content h1 {
         font-size: 8rem;
         margin-top: 3rem;
     }
-    .home-content p{
+
+    .home-content p {
         max-width: 600px;
         margin: 0 auto;
     }
-    .home-img img{
+
+    .home-img img {
         width: 56vw;
     }
 }
+
 /* Cartas en móvil */
 @media (max-width: 768px) {
-    .wrapper{
+    .wrapper {
         height: auto;
         width: 100%;
     }
-    .container{
+
+    .container {
         flex-direction: column;
         align-items: center;
     }
-    .card{
+
+    .card {
         width: 90%;
         height: 80px;
         margin: 10px 0;
         justify-items: left;
         padding-left: 5px;
     }
-    .card .row{
+
+    .card .row {
         flex-direction: column;
     }
-    .description{
+
+    .description {
         width: 90%;
         height: 10px;
         padding: 15px;
     }
-    .description h4{
+
+    .description h4 {
         font-size: 18px;
     }
-    .description p{
+
+    .description p {
         font-size: 14px;
     }
-    input:checked + label{
+
+    input:checked+label {
         width: 90%;
         height: 400px;
     }
-    input:checked+label+.description{
+
+    input:checked+label+.description {
         width: 90%;
         height: 300px;
     }
